{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 15,
  "lineage": "ca5e0d5d-e100-d872-1ec4-c0c063111ee1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0573b41eb09e642e4",
            "arn": "arn:aws:ec2:eu-west-1:324827177501:elastic-ip/eipalloc-0573b41eb09e642e4",
            "domain": "vpc",
            "id": "eipalloc-0573b41eb09e642e4",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-99-81-155-69.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.81.155.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:internet-gateway/igw-09e8a25c7ce4d514a",
            "id": "igw-09e8a25c7ce4d514a",
            "owner_id": "324827177501",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-igw"
            },
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0573b41eb09e642e4",
            "association_id": "eipassoc-0734ce6cc3f223a4f",
            "connectivity_type": "public",
            "id": "nat-052a110338d0ed030",
            "network_interface_id": "eni-03f3f2cbc6c95f311",
            "private_ip": "10.0.1.58",
            "public_ip": "99.81.155.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033b15663d801f925",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:route-table/rtb-00baf0de0f193183c",
            "id": "rtb-00baf0de0f193183c",
            "owner_id": "324827177501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-052a110338d0ed030",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:route-table/rtb-0b7b7c2c78da87fba",
            "id": "rtb-0b7b7c2c78da87fba",
            "owner_id": "324827177501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e8a25c7ce4d514a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad661e3c817b8435",
            "route_table_id": "rtb-00baf0de0f193183c",
            "subnet_id": "subnet-0540fc88030718355"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0815fc26a0d74877d",
            "route_table_id": "rtb-00baf0de0f193183c",
            "subnet_id": "subnet-00c6fe1e0943568b2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d00c2636d78e1c",
            "route_table_id": "rtb-0b7b7c2c78da87fba",
            "subnet_id": "subnet-033b15663d801f925"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbba6681c02d42d3",
            "route_table_id": "rtb-0b7b7c2c78da87fba",
            "subnet_id": "subnet-0a0417873da46b3d5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:subnet/subnet-0540fc88030718355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0540fc88030718355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324827177501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-private-1",
              "type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-private-1",
              "type": "private"
            },
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:subnet/subnet-00c6fe1e0943568b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c6fe1e0943568b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324827177501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-private-2",
              "type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-private-2",
              "type": "private"
            },
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:subnet/subnet-033b15663d801f925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033b15663d801f925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324827177501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-public-1"
            },
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:subnet/subnet-0a0417873da46b3d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0417873da46b3d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324827177501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc-public-2"
            },
            "vpc_id": "vpc-0dea1b078ef88c5ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:324827177501:vpc/vpc-0dea1b078ef88c5ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6527908e9eeaf9f",
            "default_route_table_id": "rtb-0ac60fde5ba877c60",
            "default_security_group_id": "sg-036c6605ccc4fecaf",
            "dhcp_options_id": "dopt-0d7f47d64ed65bbf2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dea1b078ef88c5ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac60fde5ba877c60",
            "owner_id": "324827177501",
            "tags": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "manisha-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}